--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 ipython = "^8.26.0"
 pickleshare = "^0.7.5"
 colorama = "^0.4.6"
+xonsh = {extras = ["full"], version = "^0.18.3"}
 
 [tool.ruff]
 line-length = 120
