--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ prompt-toolkit = "^3.0.47"
 setproctitle = "^1.3.3"
 xonsh = {extras = ["full"], version = "^0.18.3"}
 ipython = "^8.28.0"
+aiogram = "^3.13.1"
 
+[tool.poetry.plugins.dotenv]
+ignore = "true"
+location = ".env"
 
 [tool.ruff]
 line-length = 120
