--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ setproctitle = "^1.3.3"
 xonsh = {extras = ["full"], version = "^0.18.3"}
 ipython = "^8.28.0"
 aiogram = "^3.13.1"
+litecli = "^1.12.3"
 
 [tool.poetry.plugins.dotenv]
 ignore = "true"
