--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ ipython = "^8.28.0"
 aiogram = "^3.13.1"
 litecli = "^1.12.3"
 email-validator = "^2.2.0"
+numpy = "^2.1.3"
+fastapi = {extras = ["standard"], version = "^0.115.5"}
+uvicorn = {extras = ["standard"], version = "^0.32.0"}
 
 [tool.poetry.plugins.dotenv]
 ignore = "true"
