--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,13 @@ prompt-toolkit = "^3.0.47"
 setproctitle = "^1.3.3"
 xonsh = {extras = ["full"], version = "^0.18.3"}
 ipython = "^8.28.0"
-aiogram = "^3.13.1"
+aiogram = "3.15.0"
 litecli = "^1.12.3"
 email-validator = "^2.2.0"
 numpy = "^2.1.3"
 fastapi = {extras = ["standard"], version = "^0.115.5"}
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
+pydantic = "2.9.2"
 
 [tool.poetry.plugins.dotenv]
 ignore = "true"
