--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ numpy = "^2.1.3"
 fastapi = {extras = ["standard"], version = "^0.115.5"}
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 pydantic = "2.9.2"
+jinja2 = "^3.1.4"
 
 [tool.poetry.plugins.dotenv]
 ignore = "true"
