--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "urban"
 version = "0.1.0"
 description = ""
 authors = ["thrve <hithrv@yandex.ru>"]
+license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -15,17 +16,21 @@ setproctitle = "^1.3.3"
 xonsh = {extras = ["full"], version = "^0.18.3"}
 ipython = "^8.28.0"
 aiogram = "3.15.0"
-litecli = "^1.12.3"
 email-validator = "^2.2.0"
 numpy = "^2.1.3"
 fastapi = {extras = ["standard"], version = "^0.115.5"}
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 pydantic = "2.9.2"
 jinja2 = "^3.1.4"
+sqlalchemy = "^2.0.36"
 
 [tool.poetry.plugins.dotenv]
 ignore = "true"
 location = ".env"
+
+
+[tool.poetry.group.dev.dependencies]
+litecli = "^1.13.2"
 
 [tool.ruff]
 line-length = 120
