--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ uvicorn = {extras = ["standard"], version = "^0.32.0"}
 pydantic = "2.9.2"
 jinja2 = "^3.1.4"
 sqlalchemy = "^2.0.36"
+alembic = "^1.14.0"
 
 [tool.poetry.plugins.dotenv]
 ignore = "true"
@@ -31,6 +32,7 @@ location = ".env"
 
 [tool.poetry.group.dev.dependencies]
 litecli = "^1.13.2"
+ruff = "^0.8.4"
 
 [tool.ruff]
 line-length = 120
