--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pydantic = "2.9.2"
 jinja2 = "^3.1.4"
 sqlalchemy = "^2.0.36"
 alembic = "^1.14.0"
+python-slugify = "^8.0.4"
 
 [tool.poetry.plugins.dotenv]
 ignore = "true"
@@ -32,7 +33,6 @@ location = ".env"
 
 [tool.poetry.group.dev.dependencies]
 litecli = "^1.13.2"
-ruff = "^0.8.4"
 
 [tool.ruff]
 line-length = 120
